--- a/assets/sass/buttons/button.scss
+++ b/assets/sass/buttons/button.scss
@@ -6,6 +6,9 @@
     color: #202020;
 
 }
+.wp-block-button{
+    padding: 1em;
+}
 .wp-block-button > *:hover{
     box-shadow: $box-shadow-d3;
 }
