--- a/style.css
+++ b/style.css
@@ -46,14 +46,14 @@ These are SCSS constants which will not effect the final product and are
 .nav-bar {
   display: flex;
   flex-direction: row;
-  padding-left: 1em;
-  padding-right: 1em;
   align-items: center;
   max-height: 15%;
   width: 100%;
   color: #4472c4;
   background: #ffffff;
   transition: all 0.2s cubic-bezier(0.075, 0.82, 0.165, 1);
+  border-bottom: 1px solid;
+  margin-bottom: 1%;
 }
 
 /** Lay the nav pages out in rows */
@@ -62,18 +62,13 @@ These are SCSS constants which will not effect the final product and are
   flex-direction: row;
   align-items: center;
   height: 100%;
-  margin: 0;
   text-align: center;
   flex-wrap: wrap;
   justify-content: center;
-  flex-grow: 1;
-  width: 100%;
 }
 
 .menu-all-pages-container {
   width: 100%;
-  padding-left: 2em;
-  padding-right: 2em;
 }
 
 /** Style the logo so that it doesn't take up the entire page */
@@ -102,6 +97,7 @@ These are SCSS constants which will not effect the final product and are
   z-index: 99;
   background-color: #4472c4;
   color: #ffffff;
+  border-bottom: 0;
 }
 
 /** Style menu items*/
@@ -192,11 +188,18 @@ ul .menu-item {
 These are SCSS constants which will not effect the final product and are
 'compiled' out
 */
-.body > *:not(.wp-block-cover) {
-  max-width: 1280px;
-  margin: 0 auto;
-  margin-left: 4em;
-  margin-right: 4em;
+.body {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.alignright {
+  float: right;
+}
+
+.alignleft {
+  float: left;
 }
 
 /* Style href elements that arent buttons */
@@ -216,16 +219,20 @@ These are SCSS constants which will not effect the final product and are
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
-/*Supress WP page headers*/
-.entry-header {
-  display: none;
+/*1/2 screen desktop*/
+@media only screen and (min-width: 1224px) {
+  .alignfull {
+    width: calc(100% + 10em);
+    margin-left: -5em;
+  }
 }
-
-.alignfull {
-  width: calc(100% + 8em);
-  margin-left: -4em;
+/* full screen desktop */
+@media only screen and (min-width: 1824px) {
+  .alignfull {
+    width: 200%;
+    margin-left: -50%;
+  }
 }
-
 /*
 These are SCSS constants which will not effect the final product and are
 'compiled' out
@@ -235,6 +242,10 @@ These are SCSS constants which will not effect the final product and are
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   background: linear-gradient(135deg, #f4b183 13%, #92baff 40%, #4472c4 68%, #37b3d2 90%);
   color: #202020;
+}
+
+.wp-block-button {
+  padding: 1em;
 }
 
 .wp-block-button > *:hover {
@@ -248,6 +259,42 @@ These are SCSS constants which will not effect the final product and are
 /* Square off buttons withs square class */
 .wp-block-button.is-style-squared > * {
   border-radius: 0;
+}
+
+.entry-title:hover {
+  text-decoration: underline;
+}
+
+@media only screen and (min-width: 1224px) {
+  .entry-header {
+    margin-left: 5em;
+  }
+
+  .entry-content {
+    margin-left: 5em;
+    margin-right: 5em;
+  }
+
+  .sticky-post {
+    font-size: 20px;
+    font-weight: bolder;
+  }
+}
+@media only screen and (min-width: 1824px) {
+  .entry-header {
+    margin-left: 25%;
+    margin-right: 25%;
+  }
+
+  .entry-content {
+    margin-left: 25%;
+    margin-right: 25%;
+  }
+
+  .sticky-post {
+    font-size: 20px;
+    font-weight: bolder;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
